@@ -10,23 +10,23 @@ DIST stunnel-5.03.tar.gz 590778 SHA256 9a1e369466fa756e6f48b11480a3338c1fa4717e6
 DIST stunnel-5.04.tar.gz 592939 SHA256 ee9702e073cb8d5940a1310ae171a38d3264f1ce3b087160728bbbcf5710cec1 SHA512 035f220106a1b9ff9c7b97c8dcd16397fd23e18213607d2a3b8502696402862dc2144fa388efbcc036db7c5235f6a89a3444e73efb9f16a793ad6bde175abc3d WHIRLPOOL 2cf9a25fa1cab01f00c43d3aa3a5a7af2bc1ab01aa9d8cd09fe07edcc635b8a2bad6098f9ea8feb43376290194bda7a5410e9f514f1185835f8cd214ec63b884
 EBUILD stunnel-5.02.ebuild 2192 SHA256 99bcde7a173e23baf878b89844c60a631bde8fdb3b2f64edd3823c3039afcb19 SHA512 b9e66ee909dc16262a437770789fa173b3400708e33e2c781ba7342ff0841615599bb08de3aa3a6c18a53a5ff21d3ad7d0f7fd93e28315549fd3c6a82d9e43bf WHIRLPOOL 1e846a9231f5909d90361ae112883ec4126fb02c32fda872412f3c67abf46d3912fdf3905a95e204c1fa98af89d913a360b8e47a9d48e1a4a6f04d2ed8b97181
 EBUILD stunnel-5.03.ebuild 2194 SHA256 09a232126fc9c88e11f54aeb70976c8c45e1a5ca796c46cfe3270ac2216fd14f SHA512 99248666d9b2038b7e86a86bf83fd26ae2721eee2aa300129207dd73f545ff1d608706fb9ad0795b55dcc0efb7ddf8d8a190d872f80a0a27649887a3ab1fc0ca WHIRLPOOL 2bcd693183c39063fa502761d8f21211d9acbd3f3ca340b1be3c98c65a16c5f886464461c4f15c8921c8fcebefbd318bdcd2f21467f7b4f660679695ed56ddbc
-EBUILD stunnel-5.04.ebuild 2200 SHA256 c1f745fa9d1885fefa2ff6485c4154a130c9a0932c772ba324fa9f9e4fd6ef09 SHA512 50695116ecdb558c7bf230a64077457dae1a4595d94371734fe3d5ae9457f7a63dda2062a3efd4f7d94831b8e7033a1d2153481432de013a8c6e062e712d0941 WHIRLPOOL 6627c3e08acfefad402feeaa1208197abf15ad90f7398773e2e78edcd29cd025a2d8bd55d70b992aa24d280c530993e52900ea37fa74980e079eae3449caf143
-MISC ChangeLog 26755 SHA256 049e9e6ac1903a9578fe8fcc14d144084dbfa2fe06509c6aa60b3773af9541b0 SHA512 27141ca2c336b7cd96e9e15c41d31dd09b197c2fd2d5e9f97c655ee33b245adbc6006cce8612a3e2f605f0019bdfcdb25346dca190b7f2f618c846ee25d1dc23 WHIRLPOOL 952cc5faa2e7193fbfc41fa0f03b80c7c343db0807d35e4a11e360bbad92af0b4bd0af4cc33c1ce1a5976e79c8ac198f7025bb9508e79dee9b94b515a20fa47b
+EBUILD stunnel-5.04.ebuild 2500 SHA256 71ff4c9f5811226c38d4098f4ca22bc77b8e69082034a795fe1efd8c1fe9cb61 SHA512 04fe6e1e8aefefdb2d4e4914aeeccc413b6b1a13f7d4cf069bd6a0e92c8a4c3f16d67ef601e5fd985d010b438d7196a391b69c58dc7455df621f75a2875772b7 WHIRLPOOL 63db0c419dc188facf7b042d71c82f25b520caa9c8216f28199f02a736138ed53e6eae4086dc5b580c12dd7b8a89711f06d2308755d6fc3da6cfc230471e6abe
+MISC ChangeLog 26868 SHA256 c24c77f0782a6c06449b24c49aa16c5a89bf1caadc66b212988516fee23ad357 SHA512 b39f909e52d2804c2c79bf309f65f666a498d0d57dc691e9975cea79f0cbf8c9a8b1bb525708fa448781295fd5f1caad2e56318d81305b0d0897d53ee5b7da05 WHIRLPOOL 4b800bd511fdfb35e0abb9186ab738b68d9b3aaf2550edb36136fc15e89adb229925629eeeb5b907d10a32ba565ef4df73edce9e160999a5dd8a5ef8c16e3139
 MISC metadata.xml 622 SHA256 42b6c75bd95fd3f6322e6a6f726a9e07d74f0b46376a6f17718f9043cf6cc225 SHA512 930faf03b0f8e73c0ddb1a9821c04d8e0b0eb49fbf1e70ba439cd810e7aac827490b2036fb9a4bf4d8f2d96b3a2e0c0b2923ed21ae17b08ca09464c7cee54997 WHIRLPOOL a604c6422e399f97c5d701d756eee871438b9bb7fb7195c5b4a35357be9e11b7709d7e77172d85f1e5f1d31987de958e8f0f29f13bd1106afab1bb32b75564e1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJUIANfAAoJEJOE+m71LUu6dqAP/3sHqAT455RLfhG+Y7n8KCTa
-nCVIfPwXriVESPZz2eB+tgirpc3OnbtAiM6PZN1COR1t7a+T/00dcF3/bU3qDu75
-W/afTa0FCy2N388ZUpqllpq1ywS2TXxtRzbUV+8s3kbOgmhuxwMNNPBXiyJ+xAlq
-YGVXi+YU7cGR/ZNva+K0E//NLRWforOUPjBcZuOZwnr87JIVIWfx/8TWrBqTg/ah
-9rZ3h/MrwlyvHP+ovoe5IZ67V19bqvn2ZIoDC80ancnyw6EUor4w9p6uG3u62Uhg
-AmxiCPyB8VWJrVmxdv03Ph96QkXn1ZC7EpZf7LhIYNcCsre7M3VuwxyKhiXQ5PQl
-YtkToX8eNJ86AV3BT4D2kRsH0i7RvOD44ppg5S4hN2lDkZicaD5VA9S3ilb6QvrR
-CwwM3m4pfV0wfBxUTzGhJTwnE3Wil8utSUa0jT1lQ5jfqt9YKs17SZxDrKj6aODG
-vNCoL17TNiF9lVNIxIFehVIgnXMTricWiFXhP5LuruxE3wuJiTPpNyGVXdHRh3NZ
-Y/Yy7iDWtVU/gq3vAHL9Iim+e+Ddjs6dIF4mV2OI9xSrgXKi/r3gEIPC16OZkXAk
-PmTrpC2C/b/12bjWoWinNW7YRBnhzMh73uzsJLiTFzi6t0VdjjyCLC6hrD+671SG
-Vq4K8pPLMxE7wN3JlWT5
-=Qok0
+iQIcBAEBCAAGBQJUIcv6AAoJEJOE+m71LUu6eJ8QAKoN1evbAZM5gyW7gUenk7Bj
+KzUknRqv32Wlm1d9o62R766urRxSnauKJ/aGoCi7LFyzOli4mmtq01KvX2emc1UP
+UunAKp7hLJKCZexcFR1tmagVjROhxtO1elmedu288fCfGCkGKTp+7odQpEfj/kVL
+gDgaei4uC9jS5owFs37a0QGKTU31V9R13Kc/TUzn0Xc1ud7EDaDNc5QtfL67wrGh
+jvcg7LXEr9Z35bi7ql1v/fWTqgsxmT+U1DxmTCr0M6aUkTcUDBURMjTSwfTBiYpw
+No3KF9pPa42xiWsb5JuU9yWu/Vw4QCrf4Tvx+609qWcKx05Fdood+Ecv30K29t/6
+60xt7LM8aOI1ArELs/RkRdBlhingnPSUVVt4usuNIXmSyVQx+37IJ44NOt7dJZf6
+E85hUf0JOsZMSgktVGSDv3tE7ypiVjVcPd9Jl5IlMGy8KaNPMcDScMWVef0FY46I
+mjeHwPPhmVokzsMvZl9FO/8BSEkpgXizVJ/5i9PTE0w7ZaMKdEnZUZpPyg047Qdz
+FLLK1AvvbA/AoU0htsFHWhQ7hPL9yAZaZX3K928owp2J74Mdlly+hb8GENc+LpsM
+rwbU6mmdEmMDb939u4yVyd3clcpmfX8vaF7PjQdRjadOZHYJzr74Oc///Qk/0oHU
+BKTcNv2l/MCyJnLndH3u
+=BB+8
 -----END PGP SIGNATURE-----
